fdo#39657: fix crash when parsing XML signatures